[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/AmaticSC-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Icons/volum.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/volume_mute.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/volume_grey.png" type="Texture" id=5]
[ext_resource path="res://Scripts/LinkClimateChangeButton.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/logo-video.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = true
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Font/fallback", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 90
use_mipmaps = true
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Font/fallback", "Settings" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.433594, 0.628296, 1, 0.588235 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Shadow" ]

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.344828, 1, 0.588235 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Shadow" ]

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.148438, 1, 0, 0.414353 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Shadow" ]

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0.449219, 0.449219, 0.411765 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Shadow" ]

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0, 0, 0.411765 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Shadow" ]

[sub_resource type="StyleBoxEmpty" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.145098, 1, 0, 0.411765 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Shadow" ]

[sub_resource type="DynamicFont" id=11]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[sub_resource type="DynamicFont" id=12]

size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[sub_resource type="StyleBoxFlat" id=13]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.222656, 0.362335, 1, 0.602196 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=14]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.179688, 1, 0.602196 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Corner Radius" ]

[sub_resource type="StyleBoxEmpty" id=15]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=16]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.476563, 0.570618, 1, 0.602196 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Corner Radius" ]

[node name="UI" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse" ]

[node name="HowTo" type="Label" parent="." index="0"]

anchor_left = 0.1
anchor_top = 0.0
anchor_right = 0.9
anchor_bottom = 0.15
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -2
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "NUKE ALL FACTORIES!"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Timer" type="Label" parent="." index="1"]

visible = false
anchor_left = 0.4577
anchor_top = 0.84211
anchor_right = 0.65
anchor_bottom = 0.97833
margin_top = -0.265991
margin_right = -3.59998
margin_bottom = 0.00201416
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -2
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "6:23"
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Congratz" type="Label" parent="." index="2"]

visible = false
anchor_left = 0.24868
anchor_top = 0.14805
anchor_right = 0.74771
anchor_bottom = 0.35
margin_left = -0.648315
margin_top = -0.829994
margin_right = -0.655029
margin_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -2
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "CONGRATZ!"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="GameOver" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.24868
anchor_top = 0.14805
anchor_right = 0.74771
anchor_bottom = 0.35
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -2
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "GAME OVER"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="StartScreen" type="Control" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="Button" parent="StartScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags", "Visibility", "custom_styles" ]

[node name="Start" type="Label" parent="StartScreen/Start" index="0"]

anchor_left = 0.03
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.36
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.261719, 0.359772, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -2
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "SAVE THE EARTH!"
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Quit" type="Button" parent="StartScreen" index="1"]

anchor_left = 0.5
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.6
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Visibility", "custom_styles" ]

[node name="Quit" type="Label" parent="StartScreen/Quit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.95
anchor_bottom = 1.0
margin_right = -0.399994
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.261719, 0.261719, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -2
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "QUIT"
align = 2
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Tutorial" type="Control" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MouseText" type="Label" parent="Tutorial" index="0"]

anchor_left = 0.06
anchor_top = 0.8
anchor_right = 0.35
anchor_bottom = 1.0
margin_left = -0.439999
margin_top = -0.999969
margin_right = -0.399994
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = ": Send a Comet to Earth
: Rotate the Earth"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Mouse" type="Label" parent="Tutorial" index="1"]

anchor_left = 0.01
anchor_top = 0.8
anchor_right = 0.06
anchor_bottom = 1.0
margin_left = -0.24
margin_top = -0.999969
margin_right = -0.439999
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = -2
custom_constants/shadow_offset_y = 3
text = "LMB
RMB"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Utility" type="Control" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Mouse", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Mute" type="TextureButton" parent="Utility" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.07139
anchor_bottom = 0.09988
margin_right = -0.103363
margin_bottom = -0.928001
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 12
size_flags_vertical = 12
size_flags_stretch_ratio = 0.5
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Grow Direction", "Margin", "Size Flags", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Utility" index="1"]

show_behind_parent = true
anchor_left = 0.72
anchor_top = 0.82
anchor_right = 0.98
anchor_bottom = 0.97
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Visibility", "custom_styles" ]

[node name="TextureRect" type="TextureRect" parent="Utility/Button" index="0"]

anchor_left = 0.05
anchor_top = 0.0
anchor_right = 0.95
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Margin" ]

[connection signal="pressed" from="StartScreen/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="StartScreen/Quit" to="." method="_on_Quit_pressed"]

[connection signal="toggled" from="Utility/Mute" to="." method="_on_Mute_toggled"]

[connection signal="pressed" from="Utility/Button" to="Utility/Button" method="_on_Button_pressed"]


